--- a/public/WireFrame-2.html
+++ b/public/WireFrame-2.html
@@ -19,11 +19,13 @@
         >
           <div class="container">
             <div>
+              <a href="wireframe.html">
               <span class="mr-5" style="font-size:1.3rem;color:white;">
                 <i class="fas fa-arrow-left"></i>
               </span>
+            </a>
               <a
-                href="WireFrame.html"
+                href="WireFrame-2.html"
                 class="navbar-brand"
                 style="font-size:1.5rem;line-height: 1rem;"
               >
