--- a/public/WireFrame.html
+++ b/public/WireFrame.html
@@ -64,7 +64,7 @@
     </a>
     
     <a class="list-group-item text-dark  border-0 py-3 h6 align-items-center mb-1"
-    href="#">
+    href="WireFrame-2.html">
     <span class="align-middle">
     <i class="fas fa-adjust"></i>  Garden light</span>
     <span class="button bg-dark float-right px-3 py-1 text-light text-light h-6"
